fix bug with logo on safari

--- a/source/stylus/blocks.styl
+++ b/source/stylus/blocks.styl
@@ -5,7 +5,8 @@
 	position relative
 	
 .b-logo
-	display inline-flex
+	// display inline-flex
+	display inline-block
 	&__img
 		width 100%
 		height auto
@@ -63,6 +64,9 @@
 			margin 0
 		@media $min_md
 			max-width 215px
+		// .b-logo
+		// 	&__img
+		// 		max-height 174px
 	&__col
 		display flex
 		flex-direction column
